--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django-tailwind = "*"
 environs = {version = "==8.0.0", extras = ["django"]}
 whitenoise = "==5.1.0"
 gunicorn = "==19.9.0"
+psycopg2-binary = "~=2.8.5"
 
 [dev-packages]
 autopep8 = "*"
