--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,8 @@ environs = {version = "==8.0.0", extras = ["django"]}
 whitenoise = "==5.1.0"
 gunicorn = "==19.9.0"
 psycopg2-binary = "~=2.8.5"
-black = "*"
 fontawesome-free = "*"
+autopep8 = "*"
 
 [dev-packages]
 
