--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -3,7 +3,7 @@ upstream config {
 }
 
 server {
-    listen 1347;
+    listen 1337;
 
     location / {
         proxy_pass http://config;
@@ -11,9 +11,7 @@ server {
         proxy_set_header Host $http_host;
         proxy_redirect off;
     }
-
     location /static/ {
-        alias /code/staticfiles/;
+        alias /code/static/;
     }
-
 }
